--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="content">
                         <h3>Movie Search App</h3>
                         <p>You can search movie and get all details about movie. I use OMDB API to fetch movie data.</p>
-                        <a href="https://ishimwe-jean-gloire.netlify.app/" class="projects__button " target="_blank">
+                        <a href="https://gloire-movie-search-application.netlify.app/home" class="projects__button " target="_blank">
 
                             <i class="fa-regular fa-eye"></i> View
                         </a>
