--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                             <i class="fa-regular fa-eye"></i> View
                         </a>
-                        <a href="https://github.com/Ishimwe-Jean-Gloire" class="projects__button button-left" target="_blank ">
+                        <a href="https://github.com/Ishimwe-Jean-Gloire/Linkedin-Clone" class="projects__button button-left" target="_blank ">
                             <i class="fa-solid fa-code"></i> Code
                         </a>
                     </div>
