Update hero section and resume

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
                     <div class="dawnload-cv">
-                        <a dawnload="" target="_blank" href="./pdf/Ishimwe-Jean-Gloire-Resume.pdf">DAWNLOAD CV</a>
+                        <a dawnload="" target="_blank" href="./pdf/GloireCV.pdf">DAWNLOAD CV</a>
                     </div>
                 </div>
 
@@ -503,3 +503,4 @@
 </body>
 
 </html>
+
